Space API, Scene API
+Tag and Layer API were merged to Space API
+Scene API was adapted to normal memory usage
+Changes according to changes above

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,9 +118,7 @@ add_library(Dengine
         src/Components/Transform/TransformToolkit.cpp
         src/Components/Transform/TransformToolkit.h
         src/Exceptions/LayerException.h
-        src/Layer.cpp
-        src/Layer.h
-        src/Coreutils/Messages/ComponentMessage.cpp src/Coreutils/Messages/ComponentMessage.h src/Coreutils/Messages/DirectChildrenChangeMessage.cpp src/Coreutils/Messages/DirectChildrenChangeMessage.h src/Coreutils/Messages/ParentChangeMessage.cpp src/Coreutils/Messages/ParentChangeMessage.h src/ComponentsManager.cpp src/ComponentsManager.h src/Coreutils/Messages/ComponentMessages.cpp src/Coreutils/Messages/ComponentMessages.h src/Filter/CustomFilter.h src/Filter/TraversalMethod.h)
+        src/Coreutils/Messages/ComponentMessage.cpp src/Coreutils/Messages/ComponentMessage.h src/Coreutils/Messages/DirectChildrenChangeMessage.cpp src/Coreutils/Messages/DirectChildrenChangeMessage.h src/Coreutils/Messages/ParentChangeMessage.cpp src/Coreutils/Messages/ParentChangeMessage.h src/ComponentsManager.cpp src/ComponentsManager.h src/Coreutils/Messages/ComponentMessages.cpp src/Coreutils/Messages/ComponentMessages.h src/Filter/CustomFilter.h src/Filter/TraversalMethod.h src/Space.cpp src/Space.h)
 
 
 find_package(OpenGL REQUIRED)
