std::string_view integration, new ScenesManager methods, new SpacesManager methods, Space.removeAll(), exceptions work, TransformComponent lost some SRP-violating methods
+ std::string_view was integrated everywhere it's needed. Now all parameters which means ownership control take string as std::string (and move strings if needed) and std::string_view if there's just a need of comparison or something (of const std::string&)
+ ScenesManager gain new methods for API completeness' sake:
    > loadScene(Scene&)
    > removeScene(Scene&)
+ SpacesManager gain new methods for the same's sake:
    > remove(std::string_view)
    > remove(ID)
    > remove(Space&)
+ Space.removeAll() which removes all GOs from this space was added
+ More verbose and detailed exceptions' messages were added in ScenesManager, SpacesManager and Space
+ TransformComponent lost the following methods:
    > addToSpace()
    > removeFromSpace()
    > isInSpace()
because they didn't add shortness, violated SRP and most important: they were inconvenient because took Space&, meanwhile for convenience full API was needed, namely std::string_view aliases and ID ids. But it's too expensive to maintain such big methods set in almost UNRELATED class, so we're there where we are.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_library(Dengine
         src/Exceptions/ComponentException.h
         src/Exceptions/SceneException.h
         src/Exceptions/GameObjectException.h
+        src/Exceptions/SpaceException.h
 
         src/Math/Vector3.h
         src/Math/vectors.h
