--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,11 +110,9 @@ add_library(Dengine
         src/Filter/CustomFilter.cpp
         src/Filter/Filter.h
         src/Initializer.h
-        src/Components/Transform/TransformFilters.cpp
-        src/Components/Transform/TransformFilters.h
         src/Components/Transform/TransformToolkit.cpp
         src/Components/Transform/TransformToolkit.h
-        src/Coreutils/Messages/ComponentMessage.cpp src/Coreutils/Messages/ComponentMessage.h src/Coreutils/Messages/DirectChildrenChangeMessage.cpp src/Coreutils/Messages/DirectChildrenChangeMessage.h src/Coreutils/Messages/ParentChangeMessage.cpp src/Coreutils/Messages/ParentChangeMessage.h src/ComponentsManager.cpp src/ComponentsManager.h src/Coreutils/Messages/ComponentMessages.cpp src/Coreutils/Messages/ComponentMessages.h src/Filter/CustomFilter.h src/Filter/TraversalMethod.h src/Space.cpp src/Space.h src/SpacesManager.cpp src/SpacesManager.h src/Components/Toolkit.cpp src/Components/Toolkit.h)
+        src/Coreutils/Messages/ComponentMessage.cpp src/Coreutils/Messages/ComponentMessage.h src/Coreutils/Messages/DirectChildrenChangeMessage.cpp src/Coreutils/Messages/DirectChildrenChangeMessage.h src/Coreutils/Messages/ParentChangeMessage.cpp src/Coreutils/Messages/ParentChangeMessage.h src/ComponentsManager.cpp src/ComponentsManager.h src/Coreutils/Messages/ComponentMessages.cpp src/Coreutils/Messages/ComponentMessages.h src/Filter/CustomFilter.h src/Filter/TraversalMethod.h src/Space.cpp src/Space.h src/SpacesManager.cpp src/SpacesManager.h src/Components/Toolkit.cpp src/Components/Toolkit.h src/Components/Transform/RectangleFilter.cpp src/Components/Transform/RectangleFilter.h src/Components/Transform/DistanceFilter.cpp src/Components/Transform/DistanceFilter.h src/Components/Transform/SpaceFilter.cpp src/Components/Transform/SpaceFilter.h)
 
 
 find_package(OpenGL REQUIRED)
